# IOI_Training

./: .gitignore  CMakeLists.txt  Test.cpp  bufet.cpp  halloIOI.cpp  hotel.cpp  laterne.cpp  less.cpp  main.cpp  yin_yang.cpp  ying_yang.cpp  zwerge.cpp
2025/HirschEinordnung/: hirsch.cpp
DynamischeProgrammierung/: bellmanford.cpp  bezahlen.cpp
GraphBasics/: catwalk.cpp  finanziellerNotstand.cpp  konditorei.cpp  schachturnier.cpp  verschluesselung.cpp
GreedyAlgorithms/: geweih.cpp  nachbarn.cpp  zwerge.cpp
KuerzesteWege/: besuch.cpp  musik.cpp  tour.cpp  wandern.cpp
Wettbewerbe/1.Contest/: kuenstler.cpp  orks.cpp  tennis.cpp
Wettbewerbe/2.Contest/: bintree.cpp  leuchte.cpp
bits/: stdc++.h
