cmake_minimum_required(VERSION 3.23)
project(IOI_Training)

set(CMAKE_CXX_STANDARD 23)

add_executable(Nachbarn nachbarn.cpp)
add_executable(YingYang yin_yang.cpp)
add_executable(Zwerge zwerge.cpp)
add_executable(Test Test.cpp)
add_executable(HalloIOI halloIOI.cpp)
add_executable(Laterne laterne.cpp)
add_executable(Bufet bufet.cpp)
add_executable(Geweih geweih.cpp)
add_executable(Hotel hotel.cpp hotel.cpp)
add_executable(Less less.cpp)